{
  "version": 4,
  "terraform_version": "1.4.2",
  "serial": 561,
  "lineage": "6ea6e050-291b-b34b-32a6-cd802aabae7e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:011504625346:vpc/vpc-07a7e442599df1c24",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0626c3617eae72c45",
            "default_route_table_id": "rtb-01a6df89c679919fb",
            "default_security_group_id": "sg-069438b1f3f13148d",
            "dhcp_options_id": "dopt-013670a38be2c906e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-07a7e442599df1c24",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01a6df89c679919fb",
            "owner_id": "011504625346",
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:011504625346:internet-gateway/igw-0e758e13e37960f73",
            "id": "igw-0e758e13e37960f73",
            "owner_id": "011504625346",
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "vpc_id": "vpc-07a7e442599df1c24"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:011504625346:loadbalancer/app/nginx-web-alb/70d7495d6938dca0",
            "arn_suffix": "app/nginx-web-alb/70d7495d6938dca0",
            "desync_mitigation_mode": "defensive",
            "dns_name": "nginx-web-alb-163491784.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:011504625346:loadbalancer/app/nginx-web-alb/70d7495d6938dca0",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "nginx-web-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0a881a3c1e946f38b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00acfbebaf3eaa866"
              },
              {
                "subnet_id": "subnet-0455b265e9f33d45a"
              },
              {
                "subnet_id": "subnet-0d06904c17b8ca4eb"
              }
            ],
            "subnets": [
              "subnet-00acfbebaf3eaa866",
              "subnet-0455b265e9f33d45a",
              "subnet-0d06904c17b8ca4eb"
            ],
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "vpc_id": "vpc-07a7e442599df1c24",
            "xff_header_processing_mode": "append",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_security_group.sg_alb",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:011504625346:listener/app/nginx-web-alb/70d7495d6938dca0/197ecf51aaa96e14",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:011504625346:targetgroup/nginx-alb-tg/f9fc4169a34954a8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:011504625346:listener/app/nginx-web-alb/70d7495d6938dca0/197ecf51aaa96e14",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:011504625346:loadbalancer/app/nginx-web-alb/70d7495d6938dca0",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_lb.nginx",
            "aws_lb_target_group.nginx",
            "aws_security_group.sg_alb",
            "aws_subnet.subnet1",
            "aws_subnet.subnet2",
            "aws_subnet.subnet3",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:011504625346:targetgroup/nginx-alb-tg/f9fc4169a34954a8",
            "arn_suffix": "targetgroup/nginx-alb-tg/f9fc4169a34954a8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:011504625346:targetgroup/nginx-alb-tg/f9fc4169a34954a8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "nginx-alb-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07a7e442599df1c24"
          },
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "rtb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:011504625346:route-table/rtb-09a3b41c6576de67f",
            "id": "rtb-09a3b41c6576de67f",
            "owner_id": "011504625346",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e758e13e37960f73",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a7e442599df1c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default",
            "aws_internet_gateway.igw"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02006846a666a39b5",
            "route_table_id": "rtb-09a3b41c6576de67f",
            "subnet_id": "subnet-0d06904c17b8ca4eb"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet1",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fb968cc0d5702a63",
            "route_table_id": "rtb-09a3b41c6576de67f",
            "subnet_id": "subnet-0455b265e9f33d45a"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet2",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rta-subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b56ba9c41fec896a",
            "route_table_id": "rtb-09a3b41c6576de67f",
            "subnet_id": "subnet-00acfbebaf3eaa866"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "aws_internet_gateway.igw",
            "aws_route_table.rtb",
            "aws_subnet.subnet3",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:011504625346:security-group/sg-0a881a3c1e946f38b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a881a3c1e946f38b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-alb-sg",
            "name_prefix": "",
            "owner_id": "011504625346",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a7e442599df1c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sg_nginx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:011504625346:security-group/sg-0db551d3e59b60b59",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db551d3e59b60b59",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "nginx-sg",
            "name_prefix": "",
            "owner_id": "011504625346",
            "revoke_rules_on_delete": false,
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "timeouts": null,
            "vpc_id": "vpc-07a7e442599df1c24"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:011504625346:subnet/subnet-0d06904c17b8ca4eb",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "172.31.6.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d06904c17b8ca4eb",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011504625346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "vpc_id": "vpc-07a7e442599df1c24"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:011504625346:subnet/subnet-0455b265e9f33d45a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "172.31.7.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0455b265e9f33d45a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011504625346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "vpc_id": "vpc-07a7e442599df1c24"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:011504625346:subnet/subnet-00acfbebaf3eaa866",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1c",
            "availability_zone_id": "apse1-az3",
            "cidr_block": "172.31.8.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00acfbebaf3eaa866",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "011504625346",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "tags_all": {
              "billing_code": "development-x101",
              "company": "toppan",
              "project": "toppan-web-app"
            },
            "vpc_id": "vpc-07a7e442599df1c24"
          },
          "dependencies": [
            "aws_default_vpc.default",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    }
  ]
}